Produce a PDF version

--- a/vignettes/ChromosomePlots.Rmd
+++ b/vignettes/ChromosomePlots.Rmd
@@ -1252,11 +1252,11 @@ tb$Arm <- tb$Oki.Arm
 (p2 / p3 / p4 / p5 / p6 / p7 / p8) # all plots
 ```
 
-```{r chromosome_plots_tiles_5_2_Fig4A, dependson="chromosome_plots_tiles_calcs_fig4", fig.height=6, fig.width=10, message=FALSE, warning=FALSE, dev=c("svg", "png")}
+```{r chromosome_plots_tiles_5_2_Fig4A, dependson="chromosome_plots_tiles_calcs_fig4", fig.height=6, fig.width=10, message=FALSE, warning=FALSE, dev=c("svg", "png", "pdf"), fig.ext=c("svg", "png", "pdf")}
 (p5 / p7 / p6) # Figure 4A
 ```
 
-```{r chromosome_plots_tiles_5_2_Fig4B, dependson="chromosome_plots_tiles_calcs_fig4", fig.height=4, fig.width=10, message=FALSE, warning=FALSE, dev=c("svg", "png")}
+```{r chromosome_plots_tiles_5_2_Fig4B, dependson="chromosome_plots_tiles_calcs_fig4", fig.height=4, fig.width=10, message=FALSE, warning=FALSE, dev=c("svg", "png"), fig.ext=c("svg", "png", "pdf")}
 (p10 + p11 + p12) + plot_layout(guides = 'collect') # Figure 4B
 ```
 
