Really export to PDF

--- a/vignettes/ChromosomePlots.Rmd
+++ b/vignettes/ChromosomePlots.Rmd
@@ -1256,7 +1256,7 @@ tb$Arm <- tb$Oki.Arm
 (p5 / p7 / p6) # Figure 4A
 ```
 
-```{r chromosome_plots_tiles_5_2_Fig4B, dependson="chromosome_plots_tiles_calcs_fig4", fig.height=4, fig.width=10, message=FALSE, warning=FALSE, dev=c("svg", "png"), fig.ext=c("svg", "png", "pdf")}
+```{r chromosome_plots_tiles_5_2_Fig4B, dependson="chromosome_plots_tiles_calcs_fig4", fig.height=4, fig.width=10, message=FALSE, warning=FALSE, dev=c("svg", "png", "pdf"), fig.ext=c("svg", "png", "pdf")}
 (p10 + p11 + p12) + plot_layout(guides = 'collect') # Figure 4B
 ```
 
